feat: new Card component

--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -13,8 +13,8 @@
     .container {
         background-color: #fff;
         color: #000;
-        width:60%;
-        height: 60%;
+        width:fit-content;
+        //height: 60%;
         border-radius: 20px;
         text-align: center;
         .btn-close {
